--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             <li><a href="contact.html" title="contact us">Contact <br /><span class="tagline">we're listening</span></a>
               <ul>
                 <li><a href="support.html" title="need help?">Support</a></li>
+                <li>Aj</li>
+                <li>My space</li>
               </ul>
             </li>
           </ul>
