add Cherlize Theron

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li><a href="support.html" title="need help?">Support</a></li>
                 <li>Aj</li>
-                <li>My space</li>
+                <li>Cherlize Theron</li>
               </ul>
             </li>
           </ul>
